--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,11 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
-    "react-tsparticles": "^2.9.3",
-    "tsparticles": "^2.9.3",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.7.1",
     "unique-names-generator": "^4.7.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
